# stdx

./: .gitignore  CMakeLists.txt  README.md  doxter.ini  run_doxter.bat
demo/: doxter.c  platform.c  webserver.c
demo/bake/: CMakeLists.txt  readme.md
demo/bake/src/: bake.c
demo/doxter/: CMakeLists.txt  design.txt  doxter.ini  readme.md
demo/doxter/src/: doxter.c  doxter.h  doxter_fonts.bake  doxter_parser.c  doxter_pretty.c  doxter_template.bake  markdown.h
demo/doxter/src/templates/: index_item.html  module_index.html  module_item.html  param_item.html  params.html  project_index.html  return.html  style.css  symbol.html
demo/doxter/templates/: module_index.html  params.html  return.html  style.css
demo/doxter/test/: hard.c  test.c
demo/md2html/: CMakeLists.txt  readme.md
demo/md2html/src/: main.c  markdown.h
demo/minima/: CMakeLists.txt  readme.md  test.txt
demo/minima/src/: main.c  mi_builtins.c  mi_builtins.h  mi_parser.c  mi_parser.h  mi_runtime.c  mi_runtime.h  minima.h  test_minima.c
demo/sitegenerator/sample_site/: md.css  site.ini
demo/sitegenerator/src/: markdown.h  ssg.c
demo/sitegenerator/src/tcl/: main.c  tcl.c  tcl.h  tcl_expr.c  tcl_runtime.c  tcl_runtime.h
demo/slab/: CMakeLists.txt  readme.md
demo/slab/sample_site/: _site.ini  index.md  site.ini
demo/slab/sample_site/content/: about.md  index.md  minima_language.md
demo/slab/sample_site/content/posts/: getting_started.md  markdown_support.md  minima_language.md  ministry_of_silly_walks.md  welcome_to_slab.md
demo/slab/sample_site/themes/default/_include/: header.html  top.html
demo/slab/sample_site/themes/default/_layout/: about.html  index.html  post.html
demo/slab/sample_site/themes/default/layout/: about.html  index.html  post.html
demo/slab/src/: commands.c  main.c  slab.c  slab.h  template.c
demo/webserver/: CMakeLists.txt  config.ini  webserver.c
demo/webserver/docroot/: index.html
demo/webserver/docroot/files/: naming_convention.md
demo/webserver/src/: webserver.c
docs/: index.html  stdx_arena.html  stdx_array.html  stdx_common.html  stdx_cpuid.html  stdx_filesystem.html  stdx_hashtable.html  stdx_ini.html  stdx_io.html  stdx_log.html  stdx_network.html  stdx_strbuilder.html  stdx_string.html  stdx_test.html  stdx_thread.html  stdx_time.html  stdx_tml.html  style.css
src/: stdx_allocator.h  stdx_arena.h  stdx_array.h  stdx_common.h  stdx_cpuid.h  stdx_filesystem.h  stdx_hashtable.h  stdx_ini.h  stdx_io.h  stdx_log.h  stdx_math.h  stdx_network.h  stdx_opengl.h  stdx_platform.h  stdx_platform_win32.inl  stdx_render.h  stdx_strbuilder.h  stdx_string.h  stdx_stringbuilder.h  stdx_test.h  stdx_thread.h  stdx_time.h  stdx_tml.h
tests/: test_arena.c  test_array.c  test_cpuid.c  test_filesystem.c  test_hashtable.c  test_hpool.c  test_ini.c  test_io.c  test_math.c  test_network.c  test_strbuilder.c  test_string.c  test_stringbuilder.c  test_threading.c  test_threadpool.c  test_time.c  test_tml.c
