cmake_minimum_required(VERSION 3.13)

# doxter_add_embedded_header(<target>
#   OUTPUT <path-to-generated-header>
#   INPUTS <file1> <file2> ...
#   [GUARD <include-guard>]
# )
#
# Generates the header at build time and makes it a dependency of <target>.
#
function(doxter_add_embedded_header TARGET_NAME)
  set(_opts)
  set(_oneValue OUTPUT GUARD)
  set(_multiValue INPUTS)
  cmake_parse_arguments(DXF "${_opts}" "${_oneValue}" "${_multiValue}" ${ARGN})

  if (NOT TARGET "${TARGET_NAME}")
    message(FATAL_ERROR "doxter_add_embedded_header: target not found: ${TARGET_NAME}")
  endif()

  if (NOT DXF_OUTPUT)
    message(FATAL_ERROR "doxter_add_embedded_header: OUTPUT is required")
  endif()

  if (NOT DXF_INPUTS)
    message(FATAL_ERROR "doxter_add_embedded_header: INPUTS is required (one or more files)")
  endif()

  if (NOT DXF_GUARD)
    set(DXF_GUARD "DOXTER_TEMPLATE_H")
  endif()

  # Make output absolute (relative outputs are treated relative to the current binary dir)
  get_filename_component(_out_abs "${DXF_OUTPUT}" ABSOLUTE BASE_DIR "${CMAKE_CURRENT_BINARY_DIR}")

  # Generate a script into the build dir (so you don't need multiple .cmake files in the repo).
  # We key it by target name to avoid collisions if used multiple times.
  set(_script "${CMAKE_CURRENT_BINARY_DIR}/doxter_embed_${TARGET_NAME}.cmake")

  # Script content. It expects: -DOUT=... -DGUARD=... -DINPUTS=...
  set(_script_text [=[
if (NOT DEFINED OUT)
  message(FATAL_ERROR "doxter_embed script: OUT is required")
endif()
if (NOT DEFINED INPUTS)
  message(FATAL_ERROR "doxter_embed script: INPUTS is required")
endif()
if (NOT DEFINED GUARD)
  set(GUARD "DOXTER_TEMPLATE_H")
endif()

get_filename_component(_out_dir "${OUT}" DIRECTORY)
if (_out_dir AND NOT IS_DIRECTORY "${_out_dir}")
  file(MAKE_DIRECTORY "${_out_dir}")
endif()

file(WRITE "${OUT}"
"/* \n * !!! DO NOT EDIT THIS FILE !!! \n * This file is generated at build time from the contents of src/templates. \n */\n"
"#ifndef ${GUARD}\n"
"#define ${GUARD}\n\n")

foreach(INPUT_PATH IN LISTS INPUTS)
  if (NOT EXISTS "${INPUT_PATH}")
    message(FATAL_ERROR "doxter_embed script: input file not found: ${INPUT_PATH}")
  endif()

  # Generate a symbol name based on the file name
  get_filename_component(_name "${INPUT_PATH}" NAME)
  string(REPLACE "." "_" _sym "${_name}")
  string(REGEX REPLACE "[^A-Za-z0-9_]" "_" _sym "${_sym}")
  string(REGEX REPLACE "^[^A-Za-z_]" "_" _sym "${_sym}")

  string(TOUPPER "${_sym}" _arr_name)
  #set(_arr_name "${_sym}")

  file(READ "${INPUT_PATH}" _hex HEX)
  string(REGEX MATCHALL ".." _bytes "${_hex}")

  set(_c_bytes "")
  set(_count 0)
  if (_bytes)

    LIST(APPEND _bytes 0)

    # Break lines every 16 bytes
    foreach(_b IN LISTS _bytes)
      if (_count EQUAL 0)
        string(APPEND _c_bytes "  ")
      elseif (_count GREATER 0)
        string(APPEND _c_bytes ", ")
      endif()

      if (_mod EQUAL 0)
        string(APPEND _c_bytes "\n ")
      endif()

      string(APPEND _c_bytes "0x${_b}")

      math(EXPR _count "${_count} + 1")
      math(EXPR _mod "${_count} % 8")

    endforeach()
  endif()

  file(APPEND "${OUT}"
    "/* Generated from file ${_name} */\n"
    "static const unsigned char ${_arr_name}[] = {\n${_c_bytes}\n};\n\n"
  )
endforeach()

file(APPEND "${OUT}"
  "#endif  // ${GUARD}\n"
)
]=])

  # Write/update the script at configure time.
  # (CMake will re-configure when this function definition changes anyway.)
  file(WRITE "${_script}" "${_script_text}")

  # Pass INPUTS as a single -D value containing a CMake list (semicolon-separated)
  set(_inputs_list "${DXF_INPUTS}")

  add_custom_command(
    OUTPUT "${_out_abs}"
    COMMAND "${CMAKE_COMMAND}"
    -DOUT="${_out_abs}"
    -DGUARD="${DXF_GUARD}"
    "-DINPUTS=${_inputs_list}"
    -P "${_script}"
    DEPENDS ${DXF_INPUTS} "${_script}"
  )

  # Make the generated header part of the target, so the build graph knows about it.
  target_sources("${TARGET_NAME}" PRIVATE "${_out_abs}")

  # Ensure includes can find it
  get_filename_component(_out_dir "${_out_abs}" DIRECTORY)
  target_include_directories("${TARGET_NAME}" PRIVATE "${_out_dir}")
endfunction()


#
# Doxter Project
#

project(doxter C)

set(OUTPUT_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "${OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  "${OUTPUT_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  "${OUTPUT_DIR}")

# Directory where generated headers go
set(GEN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/generated")
file(MAKE_DIRECTORY "${GEN_DIR}")

add_executable(doxter src/doxter.c src/doxter_parser.c)
target_include_directories(doxter
  PRIVATE "${CMAKE_CURRENT_LIST_DIR}/../../src"
  "${GEN_DIR}")

doxter_add_embedded_header(doxter
  OUTPUT "${GEN_DIR}/doxter_template.h"
  GUARD  "DOXTER_TEMPLATE_H"
  INPUTS

  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/index_item.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/module_index.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/module_item.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/param_item.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/params.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/project_index.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/project_module_item.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/return.html
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/style.css
  ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/symbol.html
)
# ---------------------------------------------------------
# This is how the doxter_font.h file was generated.
# There is no need to run it on every build.
# ---------------------------------------------------------
if (DEFINED DOXTER_GENERATE_FONT_H)
 doxter_add_embedded_header(doxter
   OUTPUT "${GEN_DIR}/doxter_fonts.h"
   GUARD  "DOXTER_FONTS_H"
   INPUTS
   ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/JetBrainsMono-Bold.woff2
   ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/JetBrainsMono-Italic.woff2
   ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/JetBrainsMono-Medium.woff2
   ${CMAKE_CURRENT_SOURCE_DIR}/src/templates/JetBrainsMono-Regular.woff2
 )
endif()
